spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_struct_definition.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct X {
    x: _
}


error: Enum members cannot have wildcards in their type
  ┌─ testinput:2:8
  │
2 │     x: _
  │        ^ Wildcard in enum member
